# auth_sys

./: .env.example  .gitignore  README.md  app.py  celery_app.py  pyproject.toml  requirements.txt
config/: celery_config.py  settings.py
migrations/: env.py
src/auth/: models.py  routes.py  services.py  tasks.py
src/core/: database.py  mail.py  redis.py  security.py
