[project]
name = "auth-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery[pyamqp,redis]>=5.5.3",
    "fastapi>=0.121.1",
    "pyamqp>=0.1.0.7",
    "python-jose[cryptography]>=3.5.0",
    "uvicorn[standard]>=0.38.0",
]
